# toy-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
nix/modules/: devshell.nix  rust.nix
src/: main.rs
src/toy/: mod.rs  template_instantiation.rs
src/toy/g_machine/: compiler.rs  machine.rs  mod.rs  prelude.rs  types.rs
src/toy/lexer/: mod.rs  tokens.rs
src/toy/parser/: ast.rs  mod.rs
src/toy/template_instantiation/: assoc.rs  heap.rs  machine.rs  mod.rs  node_handlers.rs  prelude.rs  prim_ops_impl.rs  stack.rs
src/toy/utils/: assoc.rs  heap.rs  heap_v2.rs  mod.rs  stack.rs
