[package]
authors = ["Hongrui Fang <chfanghr@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "toy"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
custom_derive = "0.1.7"
either = "1.15.0"
enum_derive = "0.1.7"
nom = "8.0.0"

[lib]
name = "toy"
path = "src/toy/mod.rs"

[[bin]]
name = "toy"
path = "src/main.rs"
