[package]
authors = ["Hongrui Fang <chfanghr@gmail.com>"]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "toy"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
bit-set = "0.10.0"
chumsky = { version = "0.12.0", features = ["pratt"] }
clap = { version = "4.3.14", features = ["derive"] }
custom_derive = "0.1.7"
derive-getters = "0.5.0"
enum_derive = "0.1.7"
intmap = "3.1.3"
itertools = "0.14.0"
log = "0.4.29"
monoid = "0.0.5"
pretty = "0.12.5"
roaring = "0.11.4"
stacksafe = "1.0.1"
static_assertions = "1.1.0"
stderrlog = "0.6.0"

[lib]
name = "toy"
path = "src/toy/mod.rs"

[[bin]]
name = "toy"
path = "src/main.rs"
